--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,13 @@
 @import "tailwindcss";
 @import 'swiper/css';
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
 
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
 /* @tailwind base;
 @tailwind components;
 @tailwind utilities; */
